NET-415: start work to track HTTP response lengths.